# bmssp

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNCTIONAL_REPORT.md  LICENSE  Makefile  README.md  REPORT.md  TODO.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  setup.cfg
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  question.yml
.github/workflows/: build.yml  ci.yml  deps.yml  docs.yml  labeler.yml  release-dispatch.yml  release.yml
api/bench/: index.html
api/cli/: index.html
api/dijkstra/: index.html
api/exceptions/: index.html
api/export/: index.html
api/frontier/: index.html
api/graph/: index.html
api/graph_numpy/: index.html
api/io/: index.html
api/logger/: index.html
api/path/: index.html
api/profiling/: index.html
api/solver/: index.html
api/transform/: index.html
benchmarks/: PERFORMANCE_ANALYSIS.md  performance_comparison.py  requirements.txt  run_benchmarks.sh
benchmarks/results/: .gitignore
changelog/: index.html
conda/: meta.yaml
decisions/0001-block-frontier/: index.html
decisions/0002-transform-tradeoffs/: index.html
decisions/0003-equality-relax/: index.html
design/bmssp/: index.html
docs/: PARAMETER_SENSITIVITY.md  bmssp-walkthrough.md  changelog.md  index.md
docs/api/: bench.md  cli.md  dijkstra.md  exceptions.md  export.md  frontier.md  graph.md  graph_numpy.md  io.md  logger.md  path.md  profiling.md  solver.md  transform.md
docs/decisions/: 0001-block-frontier.md  0002-transform-tradeoffs.md  0003-equality-relax.md
docs/design/: bmssp.md
docs/howto/: benchmarks.md  export.md  publish.md
docs/policy/: api.md  dependencies.md
docs/tutorials/: quickstart.md
examples/: small.csv
fortran/tests/: test_bmssp.py
go/: README.md
howto/benchmarks/: index.html
howto/export/: index.html
howto/publish/: index.html
implementations/c/: README.md  bmssp.c
implementations/c/tests/: test_bmssp.py
implementations/fortran/: README.md  bmssp.f90
implementations/go/: bmssp.go  go.mod
implementations/go/tests/: bmssp_test.go
implementations/java/: BMSSP.java
implementations/python/: bmssp.py
implementations/python/tests/: test_bmssp.py  test_suite.py
implementations/rust/: README.md
java/: README.md
paper/: paper.bib  paper.md
paper/figures/: plot_bench.py
policy/api/: index.html
policy/dependencies/: index.html
python/: README.md
rust/src/: main.rs
scripts/: reproduce.sh
search/: search_index.json
src/ssspx/: __init__.py  bench.py  cli.py  frontier.py  graph_numpy.py  io.py  logger.py  path.py  solver.py  transform.py
tests/: test_cli.py  test_correctness.py  test_export.py  test_frontier.py  test_paths.py  test_transform.py
tests/integration/: test_cli_integration.py
tests/regressions/: test_random_snapshot.py
tests/regressions/fixtures/: snapshot_1.json  snapshot_2.json
tests/stress/: test_large_graphs.py
tests/unit/: test_cli_errors.py  test_cli_usage.py  test_deprecation.py  test_frontier_edge_cases.py  test_graph_negative_weight.py  test_io_roundtrip.py  test_logger.py  test_multi_source.py  test_numpy_backend.py  test_path_reconstruction.py  test_solver_counters.py  test_solver_invariants.py  test_solver_metrics.py  test_transform_invariants.py  test_zero_weight_cycles.py
tests/unit/fixtures/: cli_help.txt
tools/: check_deprecations.py  update_citation.py  update_snapshots.py
tutorials/quickstart/: index.html
vizualization/: README.md  bmssp_visualization.py  requirements.txt
vizualization/scripts/: compare_algorithms.py  educational_demo.py  generate_examples.py
